# uni-bremen-mensa-tui

./: Cargo.toml  README.md
marterials/: README  res.json
resources/: queries.txt  res.json
src/: main.rs  menu.rs
