[package]
name = "uni-bremen-mensa-tui"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.12.12", features = ["blocking", "json"]}
scraper = {version="0.19.0"}
serde_json = "1.0"
chrono = "0.4"
clap = {version="4.5.29", features = ["derive"]}